--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
